--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <header id="Banner">
+    <header id="banner">
 			<h1>Top Header</h1>
 		</header>
 
@@ -20,7 +20,7 @@
 		</nav>
 
 		<section id="main">
-			<h3>Section Title</h3>	
+			<h3>Main Content Title</h3>	
 			<p>The contents of this section go here.</p>
 		</section>
 
